Added a bunch of cool stuff

--- a/CVDotNet/appsettings.json
+++ b/CVDotNet/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=cvDB;uid=root;password=eucnvs121294"
+  }
 }
