More cool stuff

--- a/.gitignore
+++ b/.gitignore
@@ -343,3 +343,4 @@ fabric.properties
 # End of https://www.gitignore.io/api/rider,aspnetcore
 
 /CVDotNet/Models/cvDBContext.cs
+/CVDotNet/appsettings.json
