--- a/CVDotNet/CVDotNet.csproj
+++ b/CVDotNet/CVDotNet.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     </PropertyGroup>
 
     <ItemGroup>
@@ -9,6 +10,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper">
+          <Version>8.0.0</Version>
+        </PackageReference>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection">
+          <Version>6.0.0</Version>
+        </PackageReference>
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="MySql.Data.EntityFrameworkCore">
           <Version>8.0.15</Version>
